--- a/.travis.yml
+++ b/.travis.yml
@@ -9,23 +9,18 @@ jdk:
 #  - oraclejdk7
   - openjdk7
 
-after_script:
-  - |
-      set +e
-      declare exitCode;
-      curl -sSL https://raw.githubusercontent.com/mernst/travis-after-all/master/lib/travis-after-all.js | node
-      exitCode=$?
-
-      echo "exitCode=$exitCode TRAVIS_BRANCH=$TRAVIS_BRANCH TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST"
-
-      if [ "$exitCode" -eq 0 ]; then
+jobs:
+  include:
+    - stage: trigger downstream
+      jdk: oraclejdk8
+      script: |
+        echo "TRAVIS_BRANCH=$TRAVIS_BRANCH TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST"
         if [[ ($TRAVIS_BRANCH == master) &&
               ($TRAVIS_PULL_REQUEST == false) ]] ; then
           curl -LO https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh
           SLUGOWNER=${TRAVIS_REPO_SLUG%/*}
           sh trigger-travis.sh ${SLUGOWNER} checker-framework $TRAVISTOKEN
         fi
-      fi
 
 git:
   depth: 9
