--- a/annotation-file-utilities/tests/abbreviated/Makefile
+++ b/annotation-file-utilities/tests/abbreviated/Makefile
@@ -57,14 +57,9 @@ compile : $(SRC)
 	$(JAVAC) -g -cp bin:../../bin -d bin -sourcepath . $(SRC)
 
 # Actually runs the annotator to create the annotated java file.
-# We are required to put annotation-file-utilities.jar (and ../bin) on the
-# bootclasspath so that the JSR 308 javac classes bundled therein are found
-# before the stock javac classes that the Mac OS includes on the bootclasspath
-# (other platforms do not make such inclusions)
 output: compile $(JAIF) ../../bin $(AFU_JARS)
 	$(JAVA) \
-        -Xbootclasspath/p:../../bin:../../annotation-file-utilities.jar \
-	-cp bin \
+	-cp ../../bin:../../annotation-file-utilities.jar:bin \
 	annotator.Main \
 	${DEBUG} \
 	--abbreviate=true \
