--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,69 @@
-language: java
-
-# For an unknown reason, this isn't getting executed and I need to put it in the
-# jobs:include stages explicitly.
-# script: ./.travis-build.sh
-
 sudo: false
+
+language: generic
+
+services:
+  - docker
+
+matrix:
+env:
+  - JDKVER=jdk8
+
+before_script:
+- docker pull mdernst/ubuntu-for-cf-$JDKVER
+
+# Using travis_wait here seems to cause the job to terminate after 1 minute
+# with no error (!).
+script:
+- REMOTE_ORIGIN_URL=`git config --get remote.origin.url`
+- echo "JDKVER=${JDKVER}"
+- echo "TRAVIS_BRANCH=${TRAVIS_BRANCH}"
+- echo "REMOTE_ORIGIN_URL=${REMOTE_ORIGIN_URL}"
+- echo "TRAVIS_EVENT_TYPE=${TRAVIS_EVENT_TYPE}"
+- echo "TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST}"
+- echo "TRAVIS_PULL_REQUEST_BRANCH=${TRAVIS_PULL_REQUEST_BRANCH}"
+- echo "TRAVIS_REPO_SLUG=${TRAVIS_REPO_SLUG}"
+- >-
+  docker run mdernst/ubuntu-for-cf-$JDKVER /bin/bash -c "true &&
+     export JAVA_HOME=\`which javac|xargs readlink -f|xargs dirname|xargs dirname\` &&
+     if [ $TRAVIS_EVENT_TYPE = pull_request ] ; then
+       git clone --quiet --depth 9 $REMOTE_ORIGIN_URL checker-framework
+       cd checker-framework
+       git fetch origin +refs/pull/$TRAVIS_PULL_REQUEST/merge
+       git checkout -qf FETCH_HEAD
+       git config user.email noone@cares.com
+       git config user.name Noone Cares
+       git remote add theupstream https://github.com/$TRAVIS_REPO_SLUG.git
+       git pull --depth 9 theupstream $TRAVIS_BRANCH
+     else
+       git clone --quiet -b $TRAVIS_BRANCH --depth 9 $REMOTE_ORIGIN_URL checker-framework
+       cd checker-framework
+     fi &&
+     java -version &&
+     javac -version &&
+     export TRAVIS_REPO_SLUG=$TRAVIS_REPO_SLUG &&
+     export TRAVIS_BUILD_DIR=$TRAVIS_BUILD_DIR &&
+     ./.travis-build.sh"
 
 jobs:
   include:
-    - stage: test
-      jdk: oraclejdk8
-      script: echo "annotation-tools travis-build.sh script starting" && ./.travis-build.sh
     - stage: trigger-downstream
-      jdk: oraclejdk8
       script: |
-        echo "TRAVIS_BRANCH=$TRAVIS_BRANCH TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST"
-        if [[ ($TRAVIS_BRANCH == master) &&
-              ($TRAVIS_PULL_REQUEST == false) ]] ; then
-          curl -LO https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh
-          SLUGOWNER=${TRAVIS_REPO_SLUG%/*}
-          sh trigger-travis.sh ${SLUGOWNER} checker-framework $TRAVIS_ACCESS_TOKEN
-        fi
+          echo "TRAVIS_BRANCH=$TRAVIS_BRANCH TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST"
+          if [[ ($TRAVIS_BRANCH == master) &&
+                ($TRAVIS_PULL_REQUEST == false) ]] ; then
+            SLUGOWNER=${TRAVIS_REPO_SLUG%/*}
+            if [[ "$SLUGOWNER" == "" ]]; then
+              SLUGOWNER=typetools
+            fi
+
+            curl -LO https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh
+
+            git ls-remote https://github.com/${SLUGOWNER}/checker-framework.git &>-
+            if [ "$?" -eq 0 ]; then
+              sh trigger-travis.sh ${SLUGOWNER} checker-framework $TRAVIS_ACCESS_TOKEN
+            fi
+          fi
 
 git:
   depth: 9
