--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,11 @@ language: generic
 services:
   - docker
 
-matrix:
 env:
-  - JDKVER=jdk8
+  global:
+    - THIS_REPO = checker-framework
+  matrix:
+    - JDKVER=jdk8
 
 before_script:
 - docker pull mdernst/ubuntu-for-cf-$JDKVER
@@ -27,8 +29,8 @@ script:
   docker run mdernst/ubuntu-for-cf-$JDKVER /bin/bash -c "true &&
      export JAVA_HOME=\`which javac|xargs readlink -f|xargs dirname|xargs dirname\` &&
      if [ $TRAVIS_EVENT_TYPE = pull_request ] ; then
-       git clone --quiet --depth 9 $REMOTE_ORIGIN_URL checker-framework
-       cd checker-framework
+       git clone --quiet --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO
+       cd $THIS_REPO
        git fetch origin +refs/pull/$TRAVIS_PULL_REQUEST/merge
        git checkout -qf FETCH_HEAD
        git config user.email noone@cares.com
@@ -36,8 +38,8 @@ script:
        git remote add theupstream https://github.com/$TRAVIS_REPO_SLUG.git
        git pull --depth 9 theupstream $TRAVIS_BRANCH
      else
-       git clone --quiet -b $TRAVIS_BRANCH --depth 9 $REMOTE_ORIGIN_URL checker-framework
-       cd checker-framework
+       git clone --quiet -b $TRAVIS_BRANCH --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO
+       cd $THIS_REPO
      fi &&
      java -version &&
      javac -version &&
