--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 env:
   global:
-    - THIS_REPO = checker-framework
+    - THIS_REPO=checker-framework
   matrix:
     - JDKVER=jdk8
 
@@ -16,41 +16,39 @@ before_script:
 
 # Using travis_wait here seems to cause the job to terminate after 1 minute
 # with no error (!).
-script: |
+script:
+- REMOTE_ORIGIN_URL=`git config --get remote.origin.url`
+- echo "JDKVER=${JDKVER}"
+- echo "TRAVIS_BRANCH=${TRAVIS_BRANCH}"
+- echo "REMOTE_ORIGIN_URL=${REMOTE_ORIGIN_URL}"
+- echo "TRAVIS_EVENT_TYPE=${TRAVIS_EVENT_TYPE}"
+- echo "TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST}"
+- echo "TRAVIS_PULL_REQUEST_BRANCH=${TRAVIS_PULL_REQUEST_BRANCH}"
+- echo "TRAVIS_REPO_SLUG=${TRAVIS_REPO_SLUG}"
+- >-
+  docker run mdernst/ubuntu-for-cf-$JDKVER /bin/bash -c "true &&
+     export JAVA_HOME=\`which javac|xargs readlink -f|xargs dirname|xargs dirname\` &&
+     if [ $TRAVIS_EVENT_TYPE = pull_request ] ; then
+       git clone --quiet --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO
+       cd $THIS_REPO
+       git fetch origin +refs/pull/$TRAVIS_PULL_REQUEST/merge
+       git checkout -qf FETCH_HEAD
+       git config user.email noone@cares.com
+       git config user.name Noone Cares
+       git remote add theupstream https://github.com/$TRAVIS_REPO_SLUG.git
+       git pull --depth 9 theupstream $TRAVIS_BRANCH
+     else
+       git clone --quiet -b $TRAVIS_BRANCH --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO
+       cd $THIS_REPO
+     fi &&
+     java -version &&
+     javac -version &&
+     export TRAVIS_REPO_SLUG=$TRAVIS_REPO_SLUG &&
+     export TRAVIS_BUILD_DIR=$TRAVIS_BUILD_DIR &&
+     ./.travis-build.sh"
 
 jobs:
   include:
-    - stage: test
-      script: |
-          REMOTE_ORIGIN_URL=`git config --get remote.origin.url`
-          echo "JDKVER=${JDKVER}"
-          echo "TRAVIS_BRANCH=${TRAVIS_BRANCH}"
-          echo "REMOTE_ORIGIN_URL=${REMOTE_ORIGIN_URL}"
-          echo "TRAVIS_EVENT_TYPE=${TRAVIS_EVENT_TYPE}"
-          echo "TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST}"
-          echo "TRAVIS_PULL_REQUEST_BRANCH=${TRAVIS_PULL_REQUEST_BRANCH}"
-          echo "TRAVIS_REPO_SLUG=${TRAVIS_REPO_SLUG}"
-          >-
-          docker run mdernst/ubuntu-for-cf-$JDKVER /bin/bash -c "true &&
-             export JAVA_HOME=\`which javac|xargs readlink -f|xargs dirname|xargs dirname\` &&
-             if [ $TRAVIS_EVENT_TYPE = pull_request ] ; then
-               git clone --quiet --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO
-               cd $THIS_REPO
-               git fetch origin +refs/pull/$TRAVIS_PULL_REQUEST/merge
-               git checkout -qf FETCH_HEAD
-               git config user.email noone@cares.com
-               git config user.name Noone Cares
-               git remote add theupstream https://github.com/$TRAVIS_REPO_SLUG.git
-               git pull --depth 9 theupstream $TRAVIS_BRANCH
-             else
-               git clone --quiet -b $TRAVIS_BRANCH --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO
-               cd $THIS_REPO
-             fi &&
-             java -version &&
-             javac -version &&
-             export TRAVIS_REPO_SLUG=$TRAVIS_REPO_SLUG &&
-             export TRAVIS_BUILD_DIR=$TRAVIS_BUILD_DIR &&
-             ./.travis-build.sh"
     - stage: trigger-downstream
       script: |
           echo "TRAVIS_BRANCH=$TRAVIS_BRANCH TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST"
