--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,13 @@ env:
   global:
     - THIS_REPO=checker-framework
 # "matrix" only seems to work if there is more than one item specified!
-# Reinstate when we have more than one configuration to test.
-#   matrix:
+# But, I don't want to have to put the long script within the jobs:include:
+# block.  So, use this gross hack.
+  matrix:
     - JDKVER=jdk8
+    - JDKVER=jdk22
+    allow_failures:
+    - JDKVER: jdk22
 
 before_script:
 - docker pull mdernst/ubuntu-for-cf-$JDKVER
