Different syntax for allowed failures

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ env:
   matrix:
     - JDKVER=jdk8
     - JDKVER=jdk22
-    allow_failures:
+
+matrix:
+  allow_failures:
     - JDKVER: jdk22
 
 before_script:
