Re-enable Travis tests that were mistakenly disabled

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,13 @@ services:
 
 env:
   global:
-    - THIS_REPO = checker-framework
+    - THIS_REPO=annotation-tools
+# "matrix" only seems to work if there is more than one item specified!
+# But, I don't want to have to put the long script within the jobs:include:
+# block.  So, always use two jobs (use a dummy if necessary).
   matrix:
-    - JDKVER=jdk8
+    - JDKVER=jdk8 GROUP=test
+    - JDKVER=jdkany GROUP=misc
 
 before_script:
 - docker pull mdernst/ubuntu-for-cf-$JDKVER
@@ -18,7 +22,9 @@ before_script:
 # with no error (!).
 script:
 - REMOTE_ORIGIN_URL=`git config --get remote.origin.url`
+- echo "THIS_REPO=${THIS_REPO}"
 - echo "JDKVER=${JDKVER}"
+- echo "GROUP=${GROUP}"
 - echo "TRAVIS_BRANCH=${TRAVIS_BRANCH}"
 - echo "REMOTE_ORIGIN_URL=${REMOTE_ORIGIN_URL}"
 - echo "TRAVIS_EVENT_TYPE=${TRAVIS_EVENT_TYPE}"
@@ -45,7 +51,7 @@ script:
      javac -version &&
      export TRAVIS_REPO_SLUG=$TRAVIS_REPO_SLUG &&
      export TRAVIS_BUILD_DIR=$TRAVIS_BUILD_DIR &&
-     ./.travis-build.sh"
+     ./.travis-build.sh $GROUP"
 
 jobs:
   include:
