Remove generated Javadoc files as part of clean target [ci skip]

--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -455,7 +455,7 @@
     </exec>
   </target>
 
-  <target name="clean" depends="annotation-file-format-clean,clean-tests"
+  <target name="clean" depends="annotation-file-format-clean,clean-tests,javadoc-clean"
           description="removes generated files (e.g., .jar, .zip)">
     <delete dir="bin"/>
 
