--- a/global.build.properties
+++ b/global.build.properties
@@ -19,6 +19,9 @@ scene-lib : ${annotation-tools}/scene-lib
 
 # Compiler.  For annotations-compiler builds, use:   antfile="make/build.xml"
 annotations-compiler : ${workspace}/jsr308-langtools
+annotations-compiler-jar : ${annotations-compiler}/cfmake/javac.jar
+annotations-compiler-jdk-jar : ${annotations-compiler}/cfmake/javac-jdk.jar
+
 annotations-disassembler : ${workspace}/jsr308-langtools
 
 # Other tools
