--- a/scene-lib/.classpath
+++ b/scene-lib/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="junit.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/asmx"/>
-    	<classpathentry combineaccessrules="false" kind="src" path="/plume-lib"/>
 	<classpathentry kind="lib" path="/annotation-file-utilities/lib/guava-20.0.jar"/>
+	<classpathentry kind="lib" path="/annotation-file-utilities/lib/plume-core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
