--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ script:
   docker run mdernst/ubuntu-for-cf-$JDKVER /bin/bash -c "true &&
      export JAVA_HOME=\`which javac|xargs readlink -f|xargs dirname|xargs dirname\` &&
      if [ $TRAVIS_EVENT_TYPE = pull_request ] ; then
-       git clone --quiet --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO
+       git clone --quiet --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO || git clone --quiet --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO
        cd $THIS_REPO
        git fetch origin +refs/pull/$TRAVIS_PULL_REQUEST/merge
        git checkout -qf FETCH_HEAD
@@ -44,7 +44,7 @@ script:
        git remote add theupstream https://github.com/$TRAVIS_REPO_SLUG.git
        git pull --depth 9 theupstream $TRAVIS_BRANCH
      else
-       git clone --quiet -b $TRAVIS_BRANCH --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO
+       git clone --quiet -b $TRAVIS_BRANCH --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO || git clone --quiet -b $TRAVIS_BRANCH --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO
        cd $THIS_REPO
      fi &&
      java -version &&
