--- a/global.build.properties
+++ b/global.build.properties
@@ -17,9 +17,6 @@ afu : ${annotation-tools}/annotation-file-utilities
 asmx : ${annotation-tools}/asmx
 scene-lib : ${annotation-tools}/scene-lib
 
-# Compiler.  For annotations-compiler builds, use:   antfile="make/build.xml"
-annotations-compiler : ${workspace}/jsr308-langtools
-annotations-disassembler : ${workspace}/jsr308-langtools
-
 # Other tools
 checkerframework : ${workspace}/checker-framework
+java-tools = /Library/Java/JavaVirtualMachines/jdk1.8.0_144.jdk/Contents/Home//lib/tools.jar
