--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -72,7 +72,7 @@
     </fileset>
 
     <path id="libpath">
-      <pathelement location="${java-tools}"/>
+      <pathelement location="${env.JAVA_HOME}/lib/tools.jar"/>
       <pathelement location="${annotation-tools}/annotation-file-utilities/lib/options-all-0.3.1.jar"/>
       <pathelement location="${annotation-tools}/annotation-file-utilities/lib/plume-core.jar"/>
       <pathelement location="${annotation-tools}/annotation-file-utilities/lib/guava-20.0.jar"/>
@@ -205,7 +205,7 @@
         <exclude name="META-INF/" />
       </patternset>
     </unjar>
-    <unjar src="${java-tools}" dest="${temp-jarfile}">
+    <unjar src="${env.JAVA_HOME}/lib/tools.jar" dest="${temp-jarfile}">
       <patternset>
         <include name="**/*.class"/>
         <exclude name="META-INF/" />
