--- a/asmx/build.xml
+++ b/asmx/build.xml
@@ -33,6 +33,7 @@
   <!-- ==================================== -->
   <!-- ======== PROPERTY DEFINITION ======= -->
   <!-- ==================================== -->
+  <property environment="env"/>
 
   <property file="${user.home}/asm-build.properties"/>
   <property file="build.config"/>
@@ -126,7 +127,7 @@
     <javac destdir="${out.tmp}" debug="on" includeantruntime="false">
       <classpath>
         <pathelement location="${out.tmp}"/>
-        <pathelement path="${java-tools}"/>
+        <pathelement path="${env.JAVA_HOME}/lib/tools.jar"/>
       </classpath>
       <src path="${src}"/>
       <include name="**/*.java"/>
